Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-17328

QPixmap::load fails if (.png) extension left out from given filename when loading png image

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • 4.8.0
    • 4.7.2, 4.8.0
    • GUI: OpenGL
    • None
    • ea770c9aa3099facd7adccf5d4a159bc163e7356

      QPixmap::load( const QString & fileName, const char * format = 0, Qt::ImageConversionFlags flags = Qt::AutoColor )
      should try loading using known supported formats.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            jhautaka Jani Hautakangas
            jhautaka Jani Hautakangas
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes