Fix for loading QPixmaps from file in GL graphics system

QPixmap::load fails if extension (.png) is left out from given
filename when loading a pixmap. QPixmap should try loading with
all supported formats.

Task-number: QTBUG-17328
Reviewed-by: Samuel Rødal